tests/compile_msg/declare/duplicate_id_fail.stderr
error: Same `id: same_id` assign to multiple objects, id must be unique.
 --> tests/ui/declare/duplicate_id_fail.rs:6:11
  |
6 |       id: same_id,
  |           ^^^^^^^
...
9 |         id: same_id,
  |             ^^^^^^^

error: Same `id: same_id` assign to multiple objects, id must be unique.
  --> tests/ui/declare/duplicate_id_fail.rs:16:14
   |
16 |     states { same_id: Stateful::new(0) }
   |              ^^^^^^^
17 |     BoxDecoration {
18 |       id: same_id,
   |           ^^^^^^^

error: Same `id: same_id` assign to multiple objects, id must be unique.
  --> tests/ui/declare/duplicate_id_fail.rs:25:11
   |
25 |       id: same_id,
   |           ^^^^^^^
...
29 |           SizedBox { id: same_id, size: Size::zero() }
   |                          ^^^^^^^

error: Same `id: same_id` assign to multiple objects, id must be unique.
  --> tests/ui/declare/duplicate_id_fail.rs:36:14
   |
36 |     states { same_id: Stateful::new(0),}
   |              ^^^^^^^
...
39 |         SizedBox { id: same_id, size: Size::zero(),}
   |                        ^^^^^^^

error: Same `id: same_id` assign to multiple objects, id must be unique.
  --> tests/ui/declare/duplicate_id_fail.rs:45:14
   |
45 |     states { same_id: Stateful::new(0),}
   |              ^^^^^^^
...
48 |         states { same_id: Stateful::new(0),}
   |                  ^^^^^^^

error: Same `id: same_id` assign to multiple objects, id must be unique.
  --> tests/ui/declare/duplicate_id_fail.rs:56:11
   |
56 |       id: same_id,
   |           ^^^^^^^
...
60 |           states { same_id: Stateful::new(0),}
   |                    ^^^^^^^
